--- a/envs/dev/templates/ingress.yaml
+++ b/envs/dev/templates/ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: jupyterhub-ingress
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   rules:
     - host: jupyterhub.example.com
